completadas las secciones servicios, contacto y nosotros

--- a/html/blog.html
+++ b/html/blog.html
@@ -8,28 +8,36 @@
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<header>
-    <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
-    <nav>
-        <ul>
-            <li>
-                <a href="../index.html">Home</a>
-            </li>
-            <li>
-                <a href="servicios.html">Servicios</a>
-            </li>
-            <li>
-                <a href="nosotros.html">Nosotros</a>
-            </li>
-            <li>
-                <a href="blog.html">Blog</a>
-            </li>
-            <li>
-                <a href="contacto.html">Contacto</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+
+    <body class="Montserrat">
+        <div class="Newsletter-services">
+            <p> Sumate al Newsletter y Obtené una <strong>Asesoría 100% Gratuita</strong>
+            </p>
+        </div>
+        <header class="header-services">
+            <div>
+                <div class="container">
+                    <div class="logo-services">
+                        <img src="../imgs/amerellus-logo.png" alt="amarellus seo lab" width="150px">
+                    </div>
+                    <nav class="nav-services">
+                        <ul>
+                            <li><a href="../index.html">Home</a></li>
+                            <li><a href="servicios.html">Servicios</a></li>
+                            <li><a href="nosotros.html">Nosotros</a></li>
+                            <li><a href="blog.html">Blog</a></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>
+        </header>
 
 <body>
     <main>
@@ -38,11 +46,55 @@
         </section>
     </main>
 
-    </header>
-    <footer>
-        <p>© Designed by Amarellus SEO Lab. All Rights Reserved. Terms of Service and Privacy Policy.</p>
-        </p>
-    </footer>
+    <!--Section 5-->
+
+    <main>
+        <section class="contenedor-forms">
+
+            <body>
+                <div class="h2">
+                    <h2>HOLA ¡HABLEMOS!</h2>
+                </div>
+                <div class="form-register">
+                    <input class="controls" type="text" name="nombres" id="nombres"
+                        placeholder="Ingresa tu Nombre">
+                    <input class="controls" type="text" name="telefono" id="telefonos"
+                        placeholder="Ingresa tu Telefono">
+                    <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
+                    <input class="controls" type="text" name="mensaje" id="mensaje"
+                        placeholder="Ingresa tu Mensaje">
+                    <input class="controls" type="submit" value="Enviar">
+        </section>
+        </div>
+</body>
+</main>
+
+
+</header>
+<div class="footer">
+<footer>
+<div class="footer-content">
+    <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
+    <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+    <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+    <div class="social-media">
+        <a href="https://facebook.com" target="_blank">Facebook</a>
+        <a href="https://twitter.com" target="_blank">Twitter</a>
+        <a href="https://instagram.com" target="_blank">Instagram</a>
+        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+    </div>
+    <nav class="footer-menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="html/servicios.html">Servicios</a></li>
+            <li><a href="html/nosotros.html">Nosotros</a></li>
+            <li><a href="html/blog.html">Blog</a></li>
+            <li><a href="html/contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+</div>
+</footer>
+</div>
 
 
 </body>
