--- a/html/servicios.html
+++ b/html/servicios.html
@@ -13,6 +13,10 @@
         crossorigin="anonymous"></script>
     <!-- LINK CSS -->
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -70,7 +74,7 @@
                     <h1>Nuestros Servicios <span>SEO</span></h1>
                     <p>Especialistas en Posicionamiento Web</p>
                     <div class="wrapper">
-                        <a href="contacto.html" class="contact-button" target="_blank">Agendar Video Llamada</a>
+                        <a href="contacto.html" class="contact-button" target="_blank">Agendar Videollamada</a>
                     </div>
                 </div>
             </div>
@@ -78,23 +82,200 @@
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             </div>
-        </section>
+            <!--section servicios grid-->
+            <section class="services-section">
+                <div class="services-container">
+                    <div class="services-column">
+                        <h2>Descubre Nuestra Metodología SEO</h2>
+                    </div>
+                    <div class="services-column">
+                        <ol>
+                            <li>Auditoría SEO</li>
+                            <li>SEO On Page</li>
+                            <li>SEO Técnico</li>
+                            <li>SEO Off Page</li>
+                            <li>SEO Content</li>
+                            <li>Local SEO</li>
+                        </ol>
+                    </div>
+                </div>
+                <img src="../imgs/icono1.png" alt="logo" class="services-image-bottom">
+            </section>
 
-        </header>
-        <footer>
-            <p>© Designed by Amarellus SEO Lab. All Rights Reserved. Terms of Service and Privacy Policy.</p>
-            </p>
-        </footer>
-        <section>
-            <!--scripts de boostrap-->
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-                integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-                integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-                crossorigin="anonymous"></script>
-        </section>
+            <hr class="custom-separator">
+            <!--section cta-->
+            <section class="cta-section">
+                <h2>Mejora tu Posicionamiento Web</h2>
+                <div><a href="#" class="cta-button">¡Hablemos!</a></div>
+                <div class="grid-container">
+                    <div class="grid-item">
+                        <img src="../imgs/rendimiento.png" alt="rendimiento" class="service-image">
+                        <h3>Rankea Más</h3>
+                        <p>En el SEO Lab te ayudamos a alcanzar las primeras posiciones en los motores de búsqueda,
+                            mejorando tu visibilidad y atrayendo más clientes potenciales.</p>
+                    </div>
+                    <div class="grid-item">
+                        <img src="../imgs/trafico.png" alt="trafico" class="service-image">
+                        <h3>Mejora tu Tráfico</h3>
+                        <p>En Amarellus SEO LAB incrementamos el tráfico orgánico de tu sitio web mediante estrategias
+                            SEO efectivas, asegurando un flujo constante de visitantes cualificados.</p>
+                    </div>
+                    <div class="grid-item">
+                        <img src="../imgs/ux.png" alt="user experience" class="service-image">
+                        <h3>User Experience</h3>
+                        <p>Optimiza la experiencia del usuario con nosotros. En el SEO Lab mejoramos la navegación y
+                            usabilidad de tu sitio web para que tus visitantes disfruten cada interacción.</p>
+                    </div>
+                    <div class="grid-item">
+                        <img src="../imgs/1434090.png" alt="rapidez" class="service-image">
+                        <h3>Mejora la Rapidez</h3>
+                        <p>La velocidad de tu sitio web es crucial. En Amarellus SEO LAB optimizamos el tiempo de carga
+                            para ofrecer una experiencia rápida y eficiente, reduciendo la tasa de rebote.</p>
+                    </div>
+                </div>
+            </section>
+
+            <!--Section servicios detalle-->
+
+            <section class="services-section">
+                <div class="services-container">
+                    <div class="services-item">
+                        <div class="services-text">
+                            <h2>Auditoría SEO</h2>
+                            <p>En Amarellus SEO LAB realizamos auditorías SEO exhaustivas para identificar y corregir
+                                problemas que puedan afectar el rendimiento de tu sitio web. Analizamos aspectos
+                                técnicos, contenido y enlaces, proporcionando un informe detallado con recomendaciones
+                                personalizadas para optimizar tu estrategia SEO.</p>
+                        </div>
+                        <div class="services-image">
+                            <img src="../imgs/como realizar SEO.webp" alt="Servicio 1">
+                        </div>
+                    </div>
+                    <div class="services-item">
+                        <div class="services-image">
+                            <img src="../imgs/Cover-Seo-on-page-Alicia-Welow.jpg" alt="Servicio 2">
+                        </div>
+                        <div class="services-text">
+                            <h2>SEO On Page</h2>
+                            <p>Optimiza cada página de tu sitio web con nuestras estrategias de SEO On Page. En
+                                Amarellus SEO LAB mejoramos elementos clave como metaetiquetas, contenido, estructura de
+                                URL y velocidad de carga. Nos aseguramos de que cada página esté perfectamente alineada
+                                con las mejores prácticas de SEO para mejorar tu posicionamiento en los motores de
+                                búsqueda.</p>
+                        </div>
+                    </div>
+                    <div class="services-item">
+                        <div class="services-text">
+                            <h2>SEO Local</h2>
+                            <p>Conquista tu mercado local con nuestras estrategias de SEO Local. En Amarellus SEO LAB te
+                                ayudamos a aparecer en las búsquedas locales relevantes, optimizando tu perfil de Google
+                                My Business, obteniendo reseñas positivas y asegurando que tu negocio sea fácilmente
+                                encontrado por clientes cercanos que buscan tus servicios.</p>
+                        </div>
+                        <div class="services-image">
+                            <img src="../imgs/photo-1548345680-f5475ea5df84.avif" alt="Servicio 3">
+                        </div>
+                    </div>
+                    <div class="services-item">
+                        <div class="services-image">
+                            <img src="../imgs/seo tecnico.webp" alt="Servicio 4">
+                        </div>
+                        <div class="services-text">
+                            <h2>SEO Técnico</h2>
+                            <p>Elimina las barreras técnicas que impiden que tu sitio web alcance su máximo potencial.
+                                En Amarellus SEO LAB nos especializamos en SEO Técnico, abordando problemas como la
+                                indexación, la velocidad del sitio, la estructura del sitio y la compatibilidad móvil.
+                                Nuestro objetivo es asegurar que los motores de búsqueda puedan rastrear e indexar tu
+                                sitio de manera efectiva.</p>
+                        </div>
+                    </div>
+                    <div class="services-item">
+                        <div class="services-text">
+                            <h2>SEO Content</h2>
+                            <p>Crea contenido de alta calidad que atraiga y retenga a tu audiencia. En Amarellus SEO LAB
+                                desarrollamos estrategias de SEO Content que incluyen la investigación de palabras
+                                clave, la creación de contenido optimizado y la planificación de publicaciones. Nos
+                                aseguramos de que tu contenido no solo sea relevante y valioso, sino también
+                                perfectamente optimizado para los motores de búsqueda.</p>
+                        </div>
+                        <div class="services-image">
+                            <img src="../imgs/seo content.webp" alt="Servicio 5">
+                        </div>
+                    </div>
+                    <div class="services-item">
+                        <div class="services-image">
+                            <img src="../imgs/guia-linkbuilding-2023.jpg" alt="Servicio 6">
+                        </div>
+                        <div class="services-text">
+                            <h2>SEO Off Page</h2>
+                            <p>Fortalece la autoridad de tu sitio web con nuestras tácticas de SEO Off Page. En
+                                Amarellus SEO LAB nos enfocamos en la construcción de enlaces de calidad, la gestión de
+                                la reputación en línea y la promoción de tu sitio a través de diversas plataformas.
+                                Nuestro enfoque integral ayuda a mejorar tu clasificación en los motores de búsqueda y a
+                                aumentar tu visibilidad en línea.</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <img src="../imgs/icono1.png" alt="logo" class="services-image-bottom">
+            </section>
+            <!--Section 5-->
+
+            <main>
+                <section class="contenedor-forms">
+
+                    <body>
+                        <div class="h2">
+                            <h2>HOLA ¡HABLEMOS!</h2>
+                        </div>
+                        <div class="form-register">
+                            <input class="controls" type="text" name="nombres" id="nombres"
+                                placeholder="Ingresa tu Nombre">
+                            <input class="controls" type="text" name="telefono" id="telefonos"
+                                placeholder="Ingresa tu Telefono">
+                            <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
+                            <input class="controls" type="text" name="mensaje" id="mensaje"
+                                placeholder="Ingresa tu Mensaje">
+                            <input class="controls" type="submit" value="Enviar">
+                </section>
+                </div>
     </body>
+    </main>
+    </header>
+    <div class="footer">
+        <footer>
+            <div class="footer-content">
+                <img src="../imgs/amarellus white.png" alt="logo seo lab" width="100px">
+                <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+                <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+                <div class="social-media">
+                    <a href="https://facebook.com" target="_blank">Facebook</a>
+                    <a href="https://twitter.com" target="_blank">Twitter</a>
+                    <a href="https://instagram.com" target="_blank">Instagram</a>
+                    <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+                </div>
+                <nav class="footer-menu">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="html/servicios.html">Servicios</a></li>
+                        <li><a href="html/nosotros.html">Nosotros</a></li>
+                        <li><a href="html/blog.html">Blog</a></li>
+                        <li><a href="html/contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </footer>
+    </div>
+    <section>
+        <!--scripts de boostrap-->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+            integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+            crossorigin="anonymous"></script>
+    </section>
+</body>
 
 
 </html>
