--- a/index.html
+++ b/index.html
@@ -77,12 +77,15 @@
                     <div class="wrapper">
                         <a href="servicios.html" class="services-button" target="_blank">Conoce Más</a>
                     </div>
+                    
                 </div>
                 <div class="img-container">
                     <img src="imgs/AdobeStock_757065785-removebg-preview.png" alt="posicionamiento seo"
                         class="img-banner">
                 </div>
             </div>
+            <hr class="custom-separator">
+            
         </section>
 
     </main>
@@ -155,72 +158,158 @@
                 </section>
             </main>
             <!--section 4-->
-            <main>
-                <section>
-                    <h2>Encuéntranos</h2>
-
-                    <div class="mapouter">
-                        <div class="gmap_canvas"><iframe width="820" height="560" id="gmap_canvas"
-                                src="https://maps.google.com/maps?q=Ibera+2279+&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                                href="https://online.stopwatch-timer.net"></a><br><a
-                                href="https://www.alarm-clock.net"></a><br>
-                            <style>
-                                .mapouter {
-                                    position: relative;
-                                    text-align: right;
-                                    height: 560px;
-                                    width: 820px;
-                                }
-                            </style><a href="https://www.ongooglemaps.com">embedding maps in website</a>
-                            <style>
-                                .gmap_canvas {
-                                    overflow: hidden;
-                                    background: none !important;
-                                    height: 560px;
-                                    width: 820px;
-                                }
-                            </style>
+            <section class="reviews">
+                <h2 class="reviews-title">Lo que dicen nuestros clientes</h2>
+                <div id="reviewsCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="review-item">
+                                <img src="imgs/AdobeStock_710183126.jpeg" alt="cliente juan">
+                                <div>
+                                    <p>"¡Excelente servicio! Mejoramos nuestro posicionamiento en Google en pocas
+                                        semanas."</p>
+                                    <div class="stars">★★★★★</div>
+                                    <h3>- Juan Pérez</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="review-item">
+                                <img src="imgs/AdobeStock_858764108.jpeg" alt="cliente maria">
+                                <div>
+                                    <p>"La agencia de SEO hizo un trabajo increíble. Muy recomendados."</p>
+                                    <div class="stars">★★★★★</div>
+                                    <h3>- María Gómez</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="review-item">
+                                <img src="imgs/retrato-hombre-feliz-sonriente_23-2149022627.avif" alt="cliente carlos">
+                                <div>
+                                    <p>"Gracias a ellos aumentamos nuestras visitas y ventas online. 100% satisfechos."
+                                    </p>
+                                    <div class="stars">★★★★★</div>
+                                    <h3>- Carlos Rodríguez</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="review-item">
+                                <img src="imgs/AdobeStock_788647812.jpeg" alt="cliente ana">
+                                <div>
+                                    <p>"Profesionales y efectivos. Nuestros resultados han mejorado significativamente."
+                                    </p>
+                                    <div class="stars">★★★★★</div>
+                                    <h3>- Ana Martínez</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="review-item">
+                                <img src="imgs/AdobeStock_758539085.jpeg" alt="cliente luis">
+                                <div>
+                                    <p>"El equipo es muy atento y siempre está disponible para resolver dudas."</p>
+                                    <div class="stars">★★★★★</div>
+                                    <h3>- Luis Fernández</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="review-item">
+                                <img src="imgs/retrato-mujer-mayor-blazer-profesional-al-aire-libre-portatil_23-2150296633.avif"
+                                    alt="laura cliente">
+                                <div>
+                                    <p>"Excelente asesoramiento y resultados tangibles en poco tiempo."</p>
+                                    <div class="stars">★★★★★</div>
+                                    <h3>- Laura Sánchez</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#reviewsCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#reviewsCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </section>
 
+
+            <main>
+                <section>
+                    <h2 class="encuentranos">Encuéntranos</h2>
+                    <div class="mapouter">
+                        <div class="gmap_canvas">
+                            <iframe id="gmap_canvas"
+                                src="https://maps.google.com/maps?q=Ibera+2279+&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        </div>
                     </div>
                 </section>
             </main>
 
             <!--Section 5-->
-            <main>
-                <section>
-                    <div class="contacto">
-                        <h2>HOLA</h2>
-                        <h2>HELLO</h2>
-                        <h2>OLÁ</h2>
-                    </div>
-                </section>
-                <section class="form-register">
-                    <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingresa tu Nombre">
-                    <input class="controls" type="text" name="telefono" id="telefonos"
-                        placeholder="Ingresa tu Telefono">
-                    <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
-                    <input class="controls" type="text" name="mensaje" id="mensaje" placeholder="Ingresa tu Mensaje">
-                    <input class="controls" type="submit" value="Enviar">
-                </section>
-            </main>
 
-            </header>
-            <div class="footer">
-                <footer>
-                    <img src="imgs/amarellus white.png" alt="logo seo lab" width="100px">
-                    <p>© Designed by Amarellus SEO Lab. All Rights Reserved. Terms of Service and Privacy Policy.</p>
-                </footer>
+            <main>
+                <section class="contenedor-forms">
+
+                    <body>
+                        <div class="h2">
+                            <h2>HOLA ¡HABLEMOS!</h2>
+                        </div>
+                        <div class="form-register">
+                            <input class="controls" type="text" name="nombres" id="nombres"
+                                placeholder="Ingresa tu Nombre">
+                            <input class="controls" type="text" name="telefono" id="telefonos"
+                                placeholder="Ingresa tu Telefono">
+                            <input class="controls" type="email" name="email" id="email" placeholder="Ingresa tu Email">
+                            <input class="controls" type="text" name="mensaje" id="mensaje"
+                                placeholder="Ingresa tu Mensaje">
+                            <input class="controls" type="submit" value="Enviar">
+                </section>
+                </div>
+</body>
+</main>
+
+
+</header>
+<div class="footer">
+    <footer>
+        <div class="footer-content">
+            <img src="imgs/amarellus white.png" alt="logo seo lab" width="100px">
+            <p>© Designed by Amarellus SEO Lab. All Rights Reserved.</p>
+            <p><a href="/terms-of-service">Terms of Service</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+            <div class="social-media">
+                <a href="https://facebook.com" target="_blank">Facebook</a>
+                <a href="https://twitter.com" target="_blank">Twitter</a>
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
             </div>
-            <!--scripts de boostrap-->
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-                integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-                integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-                crossorigin="anonymous"></script>
+            <nav class="footer-menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="html/servicios.html">Servicios</a></li>
+                    <li><a href="html/nosotros.html">Nosotros</a></li>
+                    <li><a href="html/blog.html">Blog</a></li>
+                    <li><a href="html/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
+</div>
+<!--scripts de boostrap-->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
